# TeloxBeta

./: Cargo.toml  README.md  README_ES.md  config.json  database.csv  database.json  database_example.json  rustfmt.toml
src/: admin.rs  comandos.rs  fun.rs  funciones.rs  init_message.txt  main.rs
src/buttons/: buttons.rs  buttons_handler.rs  mod.rs
src/commands/: admin.rs  comandos.rs  fun.rs  funciones.rs  handler.rs  mod.rs  save_database.rs  testing.rs
src/commands/admin_commands/: ban.rs  lib.rs  mod.rs  mute.rs  unban.rs  unmute.rs
src/commands/fun_commands/: bite.rs  blush.rs  cuddle.rs  happy.rs  hug.rs  kick.rs  kill.rs  kiss.rs  laugh.rs  lib.rs  meme.rs  mod.rs  pat.rs  poke.rs  pout.rs  punch.rs  sad.rs  slap.rs  smug.rs  stare.rs  thumbs_up.rs  yeet.rs
src/commands/funciones_utils/: about.md  arrays.md  async.md  borrowing.md  closures.md  condicionales.md  constantes.md  enum.md  for.md  funciones.md  generics.md  if_let.md  iterators.md  lifetimes.md  loop.md  macros.md  match.md  metodos.md  modulos.md  novedades.md  operadores.md  option.md  ownership.md  result.md  return.md  scopes.md  shadowing.md  slices.md  string.md  struct.md  tipos_de_datos.md  traits.md  tuplas.md  variables.md  vectores.md  while.md
src/database/: db.rs  mod.rs
src/utils/: anti_spam.rs  dependencies.rs  error.rs  info.rs  macros.rs  message_utils.rs  mod.rs  random_generator.rs
